# ImgEvalPipeline

./: .gitignore  AliceVision_Node_IO_Types.txt  InstallAliceVisionDependencies.bat
AlembicReader/: runReader.bat
AlembicReader/AlembicReader/: CMakeLists.txt
AlembicReader/AlembicReader/AlembicReader/: AlembicReader.cpp  AlembicReader.h  CMakeLists.txt
DFMToAliceVision/: run.bat
DFMToAliceVision/DFMToAliceVision/: CMakeLists.txt
DFMToAliceVision/DFMToAliceVision/DFMToAliceVision/: CMakeLists.txt
DFMToAliceVision/DFMToAliceVision/DFMToAliceVision/include/: DescriptorReader.hpp  ImageData.hpp  KeyPointReader.hpp  MatchReader.hpp  Matches.hpp  OutputWriter.hpp
DFMToAliceVision/DFMToAliceVision/DFMToAliceVision/src/: DFMToAliceVision.cpp
Evaluation/: ExtractCameraPoses.py  FullEvaluation.py  IMC_stereo.py  ImageResizing.py  MatchReader.py  PoseEvaluation.py  Scene.py  StereoEvaluation.py  poses_GL3D_av.txt  poses_affe_av.txt  poses_affe_dfm.txt  poses_affe_ocv.txt  poses_sacre_coeur.txt  poses_st_peters_square_av.txt  test.py
GenerateImageMatches/GenerateImageMatches/: CMakeLists.txt
GenerateImageMatches/GenerateImageMatches/GenerateImageMatches/: CMakeLists.txt
GenerateImageMatches/GenerateImageMatches/GenerateImageMatches/src/: GenerateImageMatches.cpp
OpenCVTestPipeline/: Problems.txt  README.md  imageMatches.txt  imageMatchesDFM.txt  log.txt  runImageMatching.bat  startPipeline.bat
OpenCVTestPipeline/OpenCVTestPipeline/: CMakeLists.txt
OpenCVTestPipeline/OpenCVTestPipeline/OpenCVTestPipeline/: CMakeLists.txt  ConsoleLogger.cpp  FeatureContainer.hpp  ImageData.hpp  MatchData.hpp  MatchingPair.hpp  OpenCVTestPipeline.cpp  ThreadPool.hpp  ThreadedFeatureExtractor.hpp  ThreadedMatcher.hpp
OpenCVTestPipeline/OpenCVTestPipeline/OpenCVTestPipeline/include/: Config.hpp  ConsoleLogger.hpp  OutputWriter.hpp  ThreadPool.hpp
OpenCVTestPipeline/OpenCVTestPipeline/OpenCVTestPipeline/include/FeatureDetection/: IFeatureDetector.hpp  OcvFastFeatureDetector.hpp  OcvSiftFeatureDetector.hpp  OcvSurfFeatureDetector.hpp  OpenCVSIFTFeatureExtractor.hpp  ThreadedFeatureDetector.hpp  ThreadedFeatureExtractor.hpp
OpenCVTestPipeline/OpenCVTestPipeline/OpenCVTestPipeline/include/FeatureMatching/: FlannMatcher.hpp  IMatcher.hpp  Matcher.hpp  MatchingPair.hpp  ThreadedMatcher.hpp
OpenCVTestPipeline/OpenCVTestPipeline/OpenCVTestPipeline/src/: OpenCVTestPipeline.cpp  ThreadPool.cpp
OpenCVTestPipeline/OpenCVTestPipeline/OpenCVTestPipeline/src/FeatureMatching/: ThreadedMatcher.cpp
scripts/: readPoses.bat  runAliceVisionTasks.bat  runCameraInit.bat  runCommonTasks.bat  runDFM.bat  runDFMTasks.bat  runDFMToAliceVision.bat  runFeatureExtraction.bat  runFeatureMatching.bat  runImageMatching.bat  runMeshRekonstruction.bat  runStructureFromMotion.bat
